--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "sapper-test",
+  "description": "a test to see if Sapper can do all the things I want",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "dev": "sapper dev --ext '.svelte .md'",
+    "build": "sapper build --legacy --ext '.svelte .md'",
+    "export": "sapper export --legacy --ext '.svelte .md'",
+    "start": "node __sapper__/build"
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -17,9 +14,6 @@
     "sirv": "^0.4.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -29,8 +23,21 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "gray-matter": "^4.0.2",
+    "html-entities": "^1.3.1",
+    "marked": "^1.1.0",
+    "mdsvex": "^0.8.0",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "remark-attr": "^0.11.1",
     "rollup": "^2.3.4",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-svelte-svg": "^0.2.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "sapper": "^0.27.0",
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^3.7.4"
   }
 }
